# dnd-cli

./: .gitignore  Cargo.toml  LICENSE  Readme.md
characters/: fluffy.json  skills.json  template.json
characters/fluffy/: character.json
characters/fluffy/bandolier/: dagger  dart
characters/fluffy/explorer_pack/: navigators_tools  rations  rope  torhes
characters/fluffy/quiver/: arrows
src/: command.rs  main.rs  render.rs  store.rs
src/domain/: ability_score.rs  character.rs  effect.rs  hit_points.rs  inventory.rs  mod.rs  roll.rs
