[package]
name = "dnd-cli"
version = "0.1.0"
authors = ["dgoetsch <devynmichellegoetsch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"

serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"

anyhow = "1.0.40"

rand = "0.8.3"

itertools = "0.10.0"